--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -35,38 +35,41 @@
 </div>
 <div class="colstack_item rowmenu">
 	<div class="rowitem passive">
-		<a href="/panel/analytics/views/">{{lang "panel_menu_statistics"}}</a>
+		<a href="/panel/analytics/views/">{{lang "panel_menu_stats"}}</a>
 	</div>
 	{{if eq .Zone "analytics"}}
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/posts/">{{lang "panel_menu_statistics_posts"}}</a>
+			<a href="/panel/analytics/posts/">{{lang "panel_menu_stats_posts"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/topics/">{{lang "panel_menu_statistics_topics"}}</a>
+			<a href="/panel/analytics/topics/">{{lang "panel_menu_stats_topics"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/forums/">{{lang "panel_menu_statistics_forums"}}</a>
+			<a href="/panel/analytics/forums/">{{lang "panel_menu_stats_forums"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/routes/">{{lang "panel_menu_statistics_routes"}}</a>
+			<a href="/panel/analytics/routes/">{{lang "panel_menu_stats_routes"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/agents/">{{lang "panel_menu_statistics_agents"}}</a>
+			<a href="/panel/analytics/agents/">{{lang "panel_menu_stats_agents"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/systems/">{{lang "panel_menu_statistics_systems"}}</a>
+			<a href="/panel/analytics/systems/">{{lang "panel_menu_stats_systems"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/langs/">{{lang "panel_menu_statistics_languages"}}</a>
+			<a href="/panel/analytics/langs/">{{lang "panel_menu_stats_languages"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/referrers/">{{lang "panel_menu_statistics_referrers"}}</a>
+			<a href="/panel/analytics/referrers/">{{lang "panel_menu_stats_referrers"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/memory/">{{lang "panel_menu_statistics_memory"}}</a>
+			<a href="/panel/analytics/memory/">{{lang "panel_menu_stats_memory"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/active-memory/">{{lang "panel_menu_statistics_active_memory"}}</a>
+			<a href="/panel/analytics/active-memory/">{{lang "panel_menu_stats_active_memory"}}</a>
+		</div>
+		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/perf/">{{lang "panel_menu_stats_perf"}}</a>
 		</div>
 	{{end}}
 	<div class="rowitem passive">
