experimental route perf pane add 1.14 to travis test list more qutils tests
add panel_menu_stats_routes_perf phrase

--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -51,6 +51,9 @@
 			<a href="/panel/analytics/routes/">{{lang "panel_menu_stats_routes"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/routes-perf/">{{lang "panel_menu_stats_routes_perf"}}</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/agents/">{{lang "panel_menu_stats_agents"}}</a>
 		</div>
 		<div class="rowitem passive submenu">
