--- a/templates/panel_analytics_routes_perf.html
+++ b/templates/panel_analytics_routes_perf.html
@@ -1,6 +1,6 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem">
-		<h1>{{lang "panel_stats_routes_head"}}</h1>
+		<h1>{{lang "panel_stats_routes_perf_head"}}</h1>
 		{{template "panel_analytics_time_range.html" . }}
 	</div>
 </div>
