--- a/templates/guilds_guild_list.html
+++ b/templates/guilds_guild_list.html
@@ -7,11 +7,11 @@
 		{{range .GuildList}}<div class="rowitem datarow">
 			<span style="float:left;">
 				<a href="{{.Link}}" style="">{{.Name}}</a>
-				<br /><span class="rowsmall">{{.Desc}}</span>
+				<br><span class="rowsmall">{{.Desc}}</span>
 			</span>
 			<span style="float:right;">
 				<span style="float:right;font-size:14px;">{{.MemberCount}} members</span>
-				<br /><span class="rowsmall">{{.LastUpdateTime}}</span>
+				<br><span class="rowsmall">{{.LastUpdateTime}}</span>
 			</span>
 			<div style="clear:both;"></div>
 		</div>
