--- a/templates/panel_are_you_sure.html
+++ b/templates/panel_are_you_sure.html
@@ -7,7 +7,7 @@
 			<div class="rowitem"><h1>{{lang "areyousure_head"}}</h1></div>
 		</div>
 		<div class="colstack_item">
-			<div class="rowitem passive rowmsg">{{.Something.Message}}<br /><br />
+			<div class="rowitem passive rowmsg">{{.Something.Message}}<br><br>
 				<a class="username" href="{{.Something.URL}}?s={{.CurrentUser.Session}}">{{lang "areyousure_continue"}}</a>
 			</div>
 		</div>
