--- a/templates/are_you_sure.html
+++ b/templates/are_you_sure.html
@@ -4,7 +4,7 @@
 		<div class="rowitem"><h1>{{lang "areyousure_head"}}</h1></div>
 	</div>
 	<div class="rowblock">
-		<div class="rowitem passive rowmsg">{{.Something.Message}}<br /><br />
+		<div class="rowitem passive rowmsg">{{.Something.Message}}<br><br>
 			<a class="username" href="{{.Something.URL}}?s={{.CurrentUser.Session}}">{{lang "areyousure_continue"}}</a>
 		</div>
 	</div>
