--- a/templates/guilds_view_guild.html
+++ b/templates/guilds_view_guild.html
@@ -21,12 +21,12 @@
 <main id="forum_topic_list" class="rowblock topic_list" style="position:relative;z-index:50;">
 	{{range .ItemList}}<div class="rowitem topic_left passive datarow" style="background-image:url({{.Creator.Avatar}});background-position:left;background-repeat:no-repeat;background-size:64px;padding-left:72px;{{if .Sticky}}background-color:#FFFFCC;{{else if .IsClosed}}background-color:#eaeaea;{{end}}">
 		<span class="topic_inner_right rowsmall" style="float:right;">
-			<span class="replyCount">{{.PostCount}} replies</span><br />
+			<span class="replyCount">{{.PostCount}} replies</span><br>
 			<span class="lastReplyAt">{{.LastReplyAt}}</span>
 		</span>
 		<span>
 			<a class="rowtopic" href="{{.Link}}">{{.Title}}</a>
-			<br /><a class="rowsmall" href="{{.Creator.Link}}">Starter: {{.Creator.Name}}</a>
+			<br><a class="rowsmall" href="{{.Creator.Link}}">Starter: {{.Creator.Name}}</a>
 			{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="{{lang "status.closed_tooltip"}}"> | &#x1F512;&#xFE0E{{end}}</span>
 		</span>
 	</div>
