Revert "will a pointer make this faster...?"
This reverts commit 8e414486b88912d109e894edd855c005c1c7bb4f.

--- a/templates/panel_forum_edit_perms.html
+++ b/templates/panel_forum_edit_perms.html
@@ -8,7 +8,7 @@
 			<div class="formitem">
 				<a>{{.LangStr}}</a>
 				<div class="to_right">
-					<select name="perm-{{.Name}}">
+					<select name="forum-perm-{{.Name}}">
 						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
 						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
 					</select>
